# kcell12

./: README.md  pyproject.toml
cart/: admin.py  models.py  urls.py  views.py
cart/migrations/: 0005_auto_20230620_1144.py  0006_auto_20230620_1300.py  0007_auto_20230620_1301.py  0008_auto_20230620_1327.py
ecom/: settings.py  urls.py
templates/cart/: product_list.html  search.html
