[tool.poetry]
name = "kcell-summer-camp"
version = "0.1.0"
description = ""
authors = ["dima <dimashqorganbek@gmail.com>"]
readme = "README.md"
packages = [{include = "kcell_summer_camp"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
